boulder/boulder/tests/compile_fail/type/type_ascription.bo
# Mismatched types
# found `u32`
# expected `u16`
# (7:
# (8:

fn a(a: u32) -> u32 {
    a: u16 + 7
}